--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "dom-transform": "^2.1.0",
     "include-media": "^1.4.10",
     "normalize-wheel": "^1.0.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "raw-loader": "^4.0.2",
+    "three": "^0.131.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
