--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/sanity": "^0.10.0",
+    "@sanity/client": "^2.15.0",
+    "@sanity/image-url": "^0.140.22",
     "core-js": "^3.15.1",
     "dom-transform": "^2.1.0",
     "glslify-loader": "^2.0.0",
