--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "core-js": "^3.15.1",
     "dom-transform": "^2.1.0",
     "glslify-loader": "^2.0.0",
+    "gsap": "file:gsap-bonus.tgz",
     "include-media": "^1.4.10",
     "normalize-wheel": "^1.0.1",
     "nuxt": "^2.15.7",
