almost finish responsive

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "normalize-wheel": "^1.0.1",
     "nuxt": "^2.15.7",
     "raw-loader": "^4.0.2",
+    "sniffer": "github:watsondg/sniffer",
     "three": "^0.131.3"
   },
   "devDependencies": {
