add slider touch + reducedMotion

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sanity/client": "^2.15.0",
     "@sanity/image-url": "^0.140.22",
     "core-js": "^3.15.1",
+    "detect-gpu": "^3.1.18",
     "dom-transform": "^2.1.0",
     "glslify-loader": "^2.0.0",
     "gsap": "file:gsap-bonus.tgz",
